--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
                 <!-- ⚠️ IMPORTANT: Place your photo in the same folder as this HTML file -->
                 
                 <!-- Uncomment below and add your photo path -->
-                 <img src="C:\Users\Elyas\OneDrive\Documents\Desktop\CPIT455-portfolio\photo.jpg" alt="Student Photo"> 
+                 <img src="photo.jpg" alt="Student Photo"> 
                 
                 <h3>🛠 Technical Skills</h3>
                 <!-- ⚠️ EDIT: List your actual skills -->
@@ -1077,7 +1077,7 @@
             <a href="https://github.com/Elyas-baa" class="contact-btn github" target="_blank">
                 💻 GitHub
             </a>
-            <a href="C:\Users\Elyas\OneDrive\Documents\Desktop\CPIT455-portfolio\CV.pdf" class="contact-btn cv">
+            <a href="CV.pdf" class="contact-btn cv">
                 📄 Download CV
             </a>
         </div>
